# Alfred

./: Jupiter-DX-REPORT.md  MAGICBLOCK-DX.md  NVIDIA-QWEN-INTEGRATION.md  README.md  alfred-wallet.json  build_os.sh  check-vault.mjs  convert-key.js  package-lock.json  package.json  test-jupiter-live.js
encrypt-sidecar/: Cargo.toml
encrypt-sidecar/src/: main.rs
src/: discord.js  index.js  probe.js
src/brain/: router.js
src/tools/: addressbook.js  jupiter.js  magicblock.js  umbra.js
